Fixes, test cache disabling.